fix alignment on work exp page

--- a/src/scss/work-and-skills.scss
+++ b/src/scss/work-and-skills.scss
@@ -26,7 +26,7 @@
     padding: 5rem 10rem;
   }
 
-  @media (orientation: landscape) and (min-width: sizes.$desktop-lg) {
+  @media (min-width: sizes.$desktop-lg) {
     justify-content: center;
   }
 
